circle ci jdk 24 support